...
    val repositoriesState = viewModel.repositoriesState.collectAsState().value
    val selectedSearchType = remember { mutableStateOf(SearchType.TOP_10_POPULAR.value) }
    val languageType = remember { mutableStateOf(LanguageType.KOTLIN.value) }

    Scaffold(
        topBar = {
            ComposeToolbar("Repository List", true) {
                navBack.invoke()
            }
        }
    ) {
        Column(
            modifier = Modifier
...
